LPS-57945 - Fix extra white space

--- a/modules/frontend/frontend-themes-web/src/META-INF/resources/admin/_diffs/css/custom.css
+++ b/modules/frontend/frontend-themes-web/src/META-INF/resources/admin/_diffs/css/custom.css
@@ -1,3 +1,12 @@
 #wrapper {
 	padding: 0;
+
+	.portlet-layout {
+		margin-left: 0;
+		margin-right: 0;
+
+		.portlet-column {
+			padding: 0;
+		}
+	}
 }
